--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,67 @@
 aiofiles
 aiohttp
-#asyncio==3.4.3
+apscheduler
 asyncio
+bard
 beautifulsoup4
+bs4
+bing_image_downloader
+curl-cffi
+cloudscraper
+deepai
 dnspython
+emojis
 ffmpeg-python
-future==0.18.3
-search_engine_parser
-telethon==1.33.1
+Faker
+future
+google-api-python-client
 gitpython
-httpx[http2]
-heroku3
-hachoir
-motor==3.3.2
-pillow==9.5.0
-psutil
-py-tgcalls==0.9.7
-pykeyboard
-pymongo==4.6.3
-python-dotenv
-pyyaml==6.0.1
-requests
-qrcode
-SafoneAPI==1.0.65
-tgcrypto
+g4f
+geopy
 gpytranslate
-MukeshAPI
+gtts
+hachoir
+heroku3
+httpx
+img2pdf
+instaloader
+langdetect
+googletrans==4.0.0-rc1
+lexica-api
+motor 
+numpy
+nest_asyncio
+nekosbest
+openai==0.28.0
+opencv-python
+pillow==10.3.0
+psutil
+pickledb
+pycountry
+pycryptodome
+pydub
+pyfiglet
+pykeyboard
+git+https://github.com/doraemon890/pyrogram
+python-dotenv
+python-telegram-bot
+python-whois
+pyshorteners
+pyttsx3
+pytz
+pytube
+py-tgcalls==0.9.7
+pyyaml
+qrcode
+requests
 search_engine_parser
-googlesearch-python
-youtube-search-python
+speedtest-cli
+SpeechRecognition
 spotipy
 telegraph
-speedtest-cli
+tgcrypto
 unidecode
-urllib3
 wget
-git+https://github.com/KurimuzonAkuma/pyrogram@dev
 yt-dlp
-bing_image_downloader
-git+https://github.com/alexmercerind/youtube-search-python@main
-git+https://github.com/joetats/youtube_search@master
-git+https://github.com/Vivekkumar-IN/TheApi@main
-bing-image-urls
-git+https://github.com/TEAMPURVI/PurviAPI
+youtube-search
+youtube-search-python
