--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,45 @@
 aiofiles
 aiohttp
-apscheduler
+#asyncio==3.4.3
 asyncio
-bard
 beautifulsoup4
-bs4
-bing_image_downloader
-curl-cffi
-cloudscraper
-deepai
 dnspython
-emojis
 ffmpeg-python
-Faker
-future
-google-api-python-client
-gitpython
-g4f
-geopy
-gpytranslate
-gtts
-hachoir
-heroku3
-httpx
-img2pdf
-instaloader
-langdetect
-googletrans==4.0.0-rc1
-lexica-api
-motor 
-numpy
-nest_asyncio
-nekosbest
-openai==0.28.0
-opencv-python
-pillow==10.3.0
-psutil
-pickledb
-pycountry
-pycryptodome
-pydub
-pyfiglet
-pykeyboard
-git+https://github.com/doraemon890/pyrogram
-python-dotenv
-python-telegram-bot
-python-whois
-pyshorteners
-pyttsx3
-pytz
-pytube
-py-tgcalls==0.9.7
-pyyaml
-qrcode
-requests
+future==0.18.3
 search_engine_parser
-speedtest-cli
-SpeechRecognition
+telethon==1.33.1
+gitpython
+httpx[http2]
+heroku3
+hachoir
+motor==3.3.2
+pillow==9.5.0
+psutil
+py-tgcalls==0.9.7
+pykeyboard
+pymongo==4.6.3
+python-dotenv
+pyyaml==6.0.1
+requests
+qrcode
+SafoneAPI==1.0.65
+tgcrypto
+gpytranslate
+MukeshAPI
+search_engine_parser
+googlesearch-python
+youtube-search-python
 spotipy
 telegraph
-tgcrypto
+speedtest-cli
 unidecode
+urllib3
 wget
+git+https://github.com/KurimuzonAkuma/pyrogram@dev
 yt-dlp
-youtube-search
-youtube-search-python
+bing_image_downloader
+git+https://github.com/alexmercerind/youtube-search-python@main
+git+https://github.com/joetats/youtube_search@master
+git+https://github.com/Vivekkumar-IN/TheApi@main
+bing-image-urls
+git+https://github.com/TEAMPURVI/PurviAPI
