--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,50 @@
-apscheduler==3.10.4
-deep-translator
-pyromod
-openai
 aiofiles
 aiohttp
+apscheduler
 asyncio
+stripe==10.7.0
+mysql-connector-python==9.0.0
+telebot==0.0.5
+youtube_dl==2021.12.17 
 beautifulsoup4
 dnspython
 ffmpeg-python
+future==1.0.0
+git+https://github.com/AsmSafone/SafoneAPI
 gitpython
+gtts
 hachoir
 heroku3
-httpx[http2.27.2]
-httpcore==1.0.6
-lyricsgenius
-motor==2.5.0
-wget
+httpx==0.27.0
+lexica-api
+motor
+opencv-python
 pillow==9.5.0
-pymongo==3.12.0
-pytz==2023.3.post1
 psutil
-pytube
+pickledb
+pornhub-api==0.3.0
+pycountry
+pycryptodome
+pydub
+pyfiglet
 pykeyboard
+python-dotenv==1.0.1
+python-telegram-bot==21.1.1
 pyshorteners
-unidecode
-pyromod
+pyttsx3
+pytz
+pytube
 py-tgcalls==0.9.7
-ntgcalls==1.1.2
-Abg==2.3.1
-python-dotenv
-pyyaml
+pyyaml==6.0.1
 requests
 SafoneAPI
+search_engine_parser
 speedtest-cli
+SpeechRecognition
 spotipy
-tgcrypto
-urllib3
-uvloop
-flask
-urllib3==2.2.3
-gunicorn==20.1.0
-yt-dlp
+tgcrypto==1.2.5
+unidecode
 youtube-search
 youtube-search-python
 git+https://github.com/KurimuzonAkuma/pyrogram
-git+https://github.com/Vivekkumar-IN/pykeyboard
-git+https://github.com/TelegramPlayGround/pyrogram-tgcrypto
+git+https://github.com/yt-dlp/yt-dlp
